--- a/package.json
+++ b/package.json
@@ -6,11 +6,22 @@
     "@oracle/oraclejet": "~12.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
     "@oracle/oraclejet-tooling": "~12.1.0",
     "@prefresh/babel-plugin": "0.4.3",
     "@prefresh/webpack": "3.3.4",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack4": "^6.5.9",
+    "@storybook/manager-webpack4": "^6.5.9",
+    "@storybook/preact": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
+    "babel-loader": "^8.2.5",
     "compression-webpack-plugin": "10.0.0",
     "copy-webpack-plugin": "11.0.0",
+    "core-js": "^3.23.3",
     "css-loader": "6.7.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.1",
@@ -31,5 +42,9 @@
   "engines": {
     "node": ">=12.21.0"
   },
-  "private": true
+  "private": true,
+  "scripts": {
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  }
 }
