--- a/package.json
+++ b/package.json
@@ -10,14 +10,6 @@
     "@oracle/oraclejet-tooling": "~12.1.0",
     "@prefresh/babel-plugin": "0.4.3",
     "@prefresh/webpack": "3.3.4",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack4": "^6.5.9",
-    "@storybook/manager-webpack4": "^6.5.9",
-    "@storybook/preact": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.2.5",
     "compression-webpack-plugin": "10.0.0",
     "copy-webpack-plugin": "11.0.0",
@@ -31,11 +23,14 @@
     "noop-loader": "1.0.0",
     "raw-loader": "4.0.2",
     "style-loader": "3.3.1",
-    "ts-loader": "9.3.1",
-    "typescript": "4.5.4",
+    "text-loader": "^0.0.1",
+    "ts-loader": "^9.3.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.5.4",
     "underscore": "^1.10.2",
-    "webpack": "5.60.0",
-    "webpack-dev-server": "4.9.3",
+    "webpack": "^5.60.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
     "webpack-merge": "5.8.0",
     "zlib": "1.0.5"
   },
@@ -44,7 +39,7 @@
   },
   "private": true,
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "start": "npx webpack serve",
+    "build": "npx webpack build"
   }
 }
