--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "An Oracle JavaScript Extension Toolkit(JET) web app",
   "dependencies": {
-    "@oracle/oraclejet": "~12.1.0"
+    "@oracle/oraclejet": "~12.1.0",
+    "react-redux": "^8.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -39,7 +41,10 @@
   },
   "private": true,
   "scripts": {
-    "start": "npx webpack serve",
-    "build": "npx webpack build"
+    "start": "ojet serve",
+    "build": "ojet build"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
