--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,21 @@
         // "./node_modules/@oracle/oraclejet/dist/js/libs/oj/debug/*",
 
         "./node_modules/@oracle/oraclejet/dist/types/*",
+        // node_modules/@oracle/oraclejet/dist/types
       ],
+
       "react": [
-        "./node_modules/preact/compat/src/index.d.ts"
+        "./node_modules/preact/compat/"
       ],
       "react-dom": [
-        "./node_modules/preact/compat/src/index.d.ts"
+        "./node_modules/preact/compat/"
       ],
+      // "react": [
+      //   "./node_modules/preact/compat/src/index.d.ts"
+      // ],
+      // "react-dom": [
+      //   "./node_modules/preact/compat/src/index.d.ts"
+      // ],
       "oj-hello-world/*": [
         "./src/components/oj-hello-world/*"
       ],
