--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,9 +40,10 @@
       "oj-hello-world/*": [
         "./src/components/oj-hello-world/*"
       ],
-      "oj-oic-schema-curator/*": [
-        "./src/components/oj-oic-schema-curator/*"
-      ]
+          "Counter/*": [
+            "./src/components/Counter/*"
+          ]
+      
     },
     "declaration": true,
     // "noEmitOnError": true,
